src/snapshots/pactfmt__format__tests__defun_multiline-2.snap
---
source: src/format.rs
expression: doc_narrow.pretty(20)
---
(defun f
  (
    x:object{schema}
    y:[integer]
  )
  (+
    x
    (write y 1.0))
  [
    "Write"
    (write y 1.0)
    "definitely"
    ; hmm
    "succeeded"
  ]
)
