src/snapshots/pactfmt__format__tests__defun_multiline.snap
---
source: src/format.rs
expression: doc_wide.pretty(80)
---
(defun f (x:object{schema} y:[integer])
  (+ x (write y 1.0))
  [
    "Write"
    (write y 1.0)
    "definitely" ; hmm
    "succeeded"
  ]
)
