src/snapshots/pactfmt__format__tests__lists-2.snap
---
source: src/format.rs
expression: doc_narrow.pretty(20)
---
[1 2 3]
[1 2 3]
[1 2 3]
[
  1 ;hm
  2
]
