src/snapshots/pactfmt__format__tests__objects.snap
---
source: src/format.rs
expression: doc_wide.pretty(80)
---
{
  'name: "Alice"
  "age": 30
  'active: true
}

{
  "a": 1
  'b: 2.5
  "deeply-nested": {
      'x: [1 2 3]
      "y": {'z: "inner"}
    }
}

{
  "empty-obj": {}
  'symbols: ['a 'b 'c]
  "strings": ["x" "y" "z"]
}

{
  'amount: 100.00
  "currency": "USD"
  'metadata: {
      "timestamp": "2024-01-20"
      'type: "payment"
    }
}
